[gd_scene load_steps=6 format=4 uid="uid://c5e7o45ns4xlm"]

[ext_resource type="Script" uid="uid://cawy88wswda2g" path="res://room/base_room.gd" id="1_p8jlf"]
[ext_resource type="Texture2D" uid="uid://dnymbt240aqva" path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="1_y1n5c"]
[ext_resource type="PackedScene" uid="uid://di5ko5fjncf72" path="res://player/player.tscn" id="2_qimmo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qimmo"]
texture = ExtResource("1_y1n5c")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -7, 8, -7, -7, 8, -7, 8, -8, -8, -8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -7, 8, -7, 8, -8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -7, 8, -7, 8, -8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 7, 8, 7, -7, -8, -7)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -7, -8, -7, 8, -8, 8)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(7, -8, 7, 8, 8, 8, 8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -7.05603, -8, -7.05603, 6.80221, 8, 6.80221, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 7, 8, 7, 8, 7.00526, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 7, 8, 7, 8, 7.00526, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(7, -8, 7, 7, -8, 7, -8, 8, 8, 8, 8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_p8jlf"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_qimmo")

[node name="base_room" type="Node2D"]
script = ExtResource("1_p8jlf")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2.5, 2.5)
tile_set = SubResource("TileSet_p8jlf")
format = 2

[node name="base_wall" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAAAAAAAAAIAAcAAAAAAAEAAAAIAAcAAAAAAAIAAAAIAAcAAAAAAAMAAAAIAAcAAAAAAAQAAAAIAAcAAAAAAAUAAAAIAAcAAAAAAAYAAAABAAAAAAAAAAcAAAAJAAcAAAAAAAgAAAAJAAcAAAAAAAoAAAAIAAcAAAAAAAsAAAAIAAcAAAAAAAwAAAAIAAcAAAAAAA0AAAAIAAcAAAAAAA4AAAAIAAcAAAAAAA8AAAAIAAcAAAABAAAAAAAIAAcAAAABAAEAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAABAAAAAAABAAcAAAAJAAcAAAABAAgAAAAJAAcAAAABAAkAAAADAAUAAAABAAoAAAAAAAEAAAABAAsAAAAAAAEAAAABAAwAAAAAAAEAAAABAA0AAAAAAAEAAAABAA4AAAAAAAQAAAABAA8AAAAIAAcAAAACAAAAAAAIAAcAAAACAAEAAAABAAAAAAACAAIAAAAJAAcAAAACAAMAAAAJAAcAAAACAAQAAAAJAAcAAAACAAUAAAAJAAcAAAACAAYAAAAJAAcAAAACAAcAAAAJAAcAAAACAAgAAAAJAAcAAAACAAkAAAAJAAcAAAACAAoAAAAJAAcAAAACAAsAAAAJAAcAAAACAAwAAAAJAAcAAAACAA0AAAAJAAcAAAACAA4AAAABAAUAAAACAA8AAAAIAAcAAAADAAAAAAAIAAcAAAADAAEAAAABAAAAAAADAAIAAAAJAAcAAAADAAMAAAAJAAcAAAADAAQAAAAJAAcAAAADAAUAAAAJAAcAAAADAAYAAAAJAAcAAAADAAcAAAAJAAcAAAADAAgAAAAJAAcAAAADAAkAAAAJAAcAAAADAAoAAAAJAAcAAAADAAsAAAAJAAcAAAADAAwAAAAJAAcAAAADAA0AAAAJAAcAAAADAA4AAAABAAUAAAADAA8AAAAIAAcAAAAEAAAAAAAIAAcAAAAEAAEAAAABAAAAAAAEAAIAAAAJAAcAAAAEAAMAAAAJAAcAAAAEAAQAAAAJAAcAAAAEAAUAAAAJAAcAAAAEAAYAAAAJAAcAAAAEAAcAAAAJAAcAAAAEAAgAAAAJAAcAAAAEAAkAAAAJAAcAAAAEAAoAAAAJAAcAAAAEAAsAAAAJAAcAAAAEAAwAAAAJAAcAAAAEAA0AAAAJAAcAAAAEAA4AAAABAAUAAAAEAA8AAAAIAAcAAAAFAAAAAAAIAAcAAAAFAAEAAAABAAAAAAAFAAIAAAAJAAcAAAAFAAMAAAAJAAcAAAAFAAQAAAAJAAcAAAAFAAUAAAAJAAcAAAAFAAYAAAAJAAcAAAAFAAcAAAAJAAcAAAAFAAgAAAAJAAcAAAAFAAkAAAAJAAcAAAAFAAoAAAAJAAcAAAAFAAsAAAAJAAcAAAAFAAwAAAAJAAcAAAAFAA0AAAAJAAcAAAAFAA4AAAABAAUAAAAFAA8AAAAIAAcAAAAGAAAAAAAIAAcAAAAGAAEAAAABAAAAAAAGAAIAAAAJAAcAAAAGAAMAAAAJAAcAAAAGAAQAAAAJAAcAAAAGAAUAAAAJAAcAAAAGAAYAAAAJAAcAAAAGAAcAAAAJAAcAAAAGAAgAAAAJAAcAAAAGAAkAAAAJAAcAAAAGAAoAAAAJAAcAAAAGAAsAAAAJAAcAAAAGAAwAAAAJAAcAAAAGAA0AAAAJAAcAAAAGAA4AAAABAAUAAAAGAA8AAAAIAAcAAAAHAAAAAAAIAAcAAAAHAAEAAAABAAAAAAAHAAIAAAAJAAcAAAAHAAMAAAAJAAcAAAAHAAQAAAAJAAcAAAAHAAUAAAAJAAcAAAAHAAYAAAAJAAcAAAAHAAcAAAAJAAcAAAAHAAgAAAAJAAcAAAAHAAkAAAAJAAcAAAAHAAoAAAAJAAcAAAAHAAsAAAAJAAcAAAAHAAwAAAAJAAcAAAAHAA0AAAAJAAcAAAAHAA4AAAABAAUAAAAHAA8AAAAIAAcAAAAIAAAAAAAIAAcAAAAIAAEAAAABAAAAAAAIAAIAAAAJAAcAAAAIAAMAAAAJAAcAAAAIAAQAAAAJAAcAAAAIAAUAAAAJAAcAAAAIAAYAAAAJAAcAAAAIAAcAAAAJAAcAAAAIAAgAAAAJAAcAAAAIAAkAAAAJAAcAAAAIAAoAAAAJAAcAAAAIAAsAAAAJAAcAAAAIAAwAAAAJAAcAAAAIAA0AAAAJAAcAAAAIAA4AAAABAAUAAAAIAA8AAAAIAAcAAAAJAAAAAAAIAAcAAAAJAAEAAAABAAAAAAAJAAIAAAAJAAcAAAAJAAMAAAAJAAcAAAAJAAQAAAAJAAcAAAAJAAUAAAAJAAcAAAAJAAcAAAAJAAcAAAAJAAgAAAAJAAcAAAAJAAkAAAAJAAcAAAAJAAoAAAAJAAcAAAAJAAsAAAAJAAcAAAAJAAwAAAAJAAcAAAAJAA0AAAAJAAcAAAAJAA4AAAABAAUAAAAJAA8AAAAIAAcAAAAKAAAAAAAIAAcAAAAKAAEAAAABAAAAAAAKAAIAAAAJAAcAAAAKAAMAAAAJAAcAAAAKAAQAAAAJAAcAAAAKAAUAAAAJAAcAAAAKAAYAAAAJAAcAAAAKAAcAAAAJAAcAAAAKAAgAAAAJAAcAAAAKAAkAAAAJAAcAAAAKAAoAAAAJAAcAAAAKAAsAAAAJAAcAAAAKAAwAAAAJAAcAAAAKAA0AAAAJAAcAAAAKAA4AAAABAAUAAAAKAA8AAAAIAAcAAAALAAAAAAAIAAcAAAALAAEAAAABAAAAAAALAAIAAAAJAAcAAAALAAMAAAAJAAcAAAALAAQAAAAJAAcAAAALAAUAAAAJAAcAAAALAAYAAAAJAAcAAAALAAcAAAAJAAcAAAALAAgAAAAJAAcAAAALAAkAAAAJAAcAAAALAAoAAAAJAAcAAAALAAsAAAAJAAcAAAALAAwAAAAJAAcAAAALAA0AAAAJAAcAAAALAA4AAAABAAUAAAALAA8AAAAIAAcAAAAMAAAAAAAIAAcAAAAMAAEAAAABAAAAAAAMAAIAAAAJAAcAAAAMAAMAAAAJAAcAAAAMAAQAAAAJAAcAAAAMAAUAAAAJAAcAAAAMAAYAAAAJAAcAAAAMAAcAAAAJAAcAAAAMAAgAAAAJAAcAAAAMAAkAAAAJAAcAAAAMAAsAAAAJAAcAAAAMAAwAAAAJAAcAAAAMAA0AAAAJAAcAAAAMAA4AAAABAAUAAAAMAA8AAAAIAAcAAAANAAAAAAAIAAcAAAANAAEAAAABAAAAAAANAAIAAAAJAAcAAAANAAMAAAAJAAcAAAANAAQAAAAJAAcAAAANAAUAAAAJAAcAAAANAAYAAAAJAAcAAAANAAcAAAAJAAcAAAANAAgAAAAJAAcAAAANAAkAAAAJAAcAAAANAAoAAAAJAAcAAAANAAsAAAAJAAcAAAANAAwAAAAJAAcAAAANAA0AAAAJAAcAAAANAA4AAAABAAUAAAANAA8AAAAIAAcAAAAOAAAAAAAAAAMAAAAOAAEAAAABAAAAAAAOAAIAAAAJAAcAAAAOAAMAAAAJAAcAAAAOAAQAAAAJAAcAAAAOAAUAAAAJAAcAAAAOAAYAAAAJAAcAAAAOAAcAAAAJAAcAAAAOAAgAAAAJAAcAAAAOAAkAAAAJAAcAAAAOAAoAAAAJAAcAAAAOAAsAAAAJAAcAAAAOAAwAAAAJAAcAAAAOAA0AAAAJAAcAAAAOAA4AAAADAAUAAAAOAA8AAAAAAAMAAAAPAAAAAAAJAAcAAAAPAAEAAAAJAAcAAAAPAAIAAAAJAAcAAAAPAAMAAAAJAAcAAAAPAAQAAAAJAAcAAAAPAAUAAAAJAAcAAAAPAAYAAAAJAAcAAAAPAAcAAAAJAAcAAAAPAAgAAAAJAAcAAAAPAAkAAAAJAAcAAAAPAAoAAAAJAAcAAAAPAAsAAAAJAAcAAAAPAAwAAAAJAAcAAAAPAA0AAAAJAAcAAAAPAA4AAAAJAAcAAAAPAA8AAAAJAAcAAAAQAAAAAAAJAAcAAAAQAAEAAAAJAAcAAAAQAAIAAAAJAAcAAAAQAAMAAAAJAAcAAAAQAAQAAAAJAAcAAAAQAAUAAAAJAAcAAAAQAAYAAAAJAAcAAAAQAAcAAAAJAAcAAAAQAAgAAAAJAAcAAAAQAAkAAAAJAAcAAAAQAAoAAAAJAAcAAAAQAAsAAAAJAAcAAAAQAAwAAAAJAAcAAAAQAA0AAAAJAAcAAAAQAA4AAAAJAAcAAAAQAA8AAAAJAAcAAAARAAAAAAAFAAMAAAARAAEAAAABAAAAAAARAAIAAAAJAAcAAAARAAMAAAAJAAcAAAARAAQAAAAJAAcAAAARAAUAAAAJAAcAAAARAAYAAAAJAAcAAAARAAcAAAAJAAcAAAARAAgAAAAJAAcAAAARAAkAAAAJAAcAAAARAAoAAAAJAAcAAAARAAsAAAAJAAcAAAARAAwAAAAJAAcAAAARAA0AAAAJAAcAAAARAA4AAAAAAAUAAAARAA8AAAAFAAMAAAASAAAAAAAIAAcAAAASAAEAAAABAAAAAAASAAIAAAAJAAcAAAASAAMAAAAJAAcAAAASAAQAAAAJAAcAAAASAAUAAAAJAAcAAAASAAYAAAAJAAcAAAASAAcAAAAJAAcAAAASAAgAAAAJAAcAAAASAAkAAAAJAAcAAAASAAoAAAAJAAcAAAASAAsAAAAJAAcAAAASAAwAAAAJAAcAAAASAA0AAAAJAAcAAAASAA4AAAABAAUAAAASAA8AAAAIAAcAAAATAAAAAAAIAAcAAAATAAEAAAABAAAAAAATAAIAAAAJAAcAAAATAAMAAAAJAAcAAAATAAQAAAAJAAcAAAATAAUAAAAJAAcAAAATAAYAAAAJAAcAAAATAAcAAAAJAAcAAAATAAgAAAAJAAcAAAATAAkAAAAJAAcAAAATAAoAAAAJAAcAAAATAAsAAAAJAAcAAAATAAwAAAAJAAcAAAATAA0AAAAJAAcAAAATAA4AAAABAAUAAAATAA8AAAAIAAcAAAAUAAAAAAAIAAcAAAAUAAEAAAABAAAAAAAUAAIAAAAJAAcAAAAUAAMAAAAJAAcAAAAUAAQAAAAJAAcAAAAUAAUAAAAJAAcAAAAUAAYAAAAJAAcAAAAUAAcAAAAJAAcAAAAUAAgAAAAJAAcAAAAUAAkAAAAJAAcAAAAUAAoAAAAJAAcAAAAUAAsAAAAJAAcAAAAUAAwAAAAJAAcAAAAUAA0AAAAJAAcAAAAUAA4AAAABAAUAAAAUAA8AAAAIAAcAAAAVAAAAAAAIAAcAAAAVAAEAAAABAAAAAAAVAAIAAAAJAAcAAAAVAAMAAAAJAAcAAAAVAAQAAAAJAAcAAAAVAAUAAAAJAAcAAAAVAAYAAAAJAAcAAAAVAAcAAAAJAAcAAAAVAAgAAAAJAAcAAAAVAAkAAAAJAAcAAAAVAAsAAAAJAAcAAAAVAAwAAAAJAAcAAAAVAA0AAAAJAAcAAAAVAA4AAAABAAUAAAAVAA8AAAAIAAcAAAAWAAAAAAAIAAcAAAAWAAEAAAABAAAAAAAWAAIAAAAJAAcAAAAWAAMAAAAJAAcAAAAWAAQAAAAJAAcAAAAWAAUAAAAJAAcAAAAWAAYAAAAJAAcAAAAWAAcAAAAJAAcAAAAWAAgAAAAJAAcAAAAWAAkAAAAJAAcAAAAWAAoAAAAJAAcAAAAWAAsAAAAJAAcAAAAWAAwAAAAJAAcAAAAWAA0AAAAJAAcAAAAWAA4AAAABAAUAAAAWAA8AAAAIAAcAAAAXAAAAAAAIAAcAAAAXAAEAAAABAAAAAAAXAAIAAAAJAAcAAAAXAAMAAAAJAAcAAAAXAAQAAAAJAAcAAAAXAAUAAAAJAAcAAAAXAAYAAAAJAAcAAAAXAAcAAAAJAAcAAAAXAAgAAAAJAAcAAAAXAAkAAAAJAAcAAAAXAAoAAAAJAAcAAAAXAAsAAAAJAAcAAAAXAAwAAAAJAAcAAAAXAA0AAAAJAAcAAAAXAA4AAAABAAUAAAAXAA8AAAAIAAcAAAAYAAAAAAAIAAcAAAAYAAEAAAABAAAAAAAYAAIAAAAJAAcAAAAYAAMAAAAJAAcAAAAYAAQAAAAJAAcAAAAYAAUAAAAJAAcAAAAYAAYAAAAJAAcAAAAYAAgAAAAJAAcAAAAYAAkAAAAJAAcAAAAYAAoAAAAJAAcAAAAYAAsAAAAJAAcAAAAYAAwAAAAJAAcAAAAYAA0AAAAJAAcAAAAYAA4AAAABAAUAAAAYAA8AAAAIAAcAAAAZAAAAAAAIAAcAAAAZAAEAAAABAAAAAAAZAAIAAAAJAAcAAAAZAAMAAAAJAAcAAAAZAAQAAAAJAAcAAAAZAAUAAAAJAAcAAAAZAAYAAAAJAAcAAAAZAAcAAAAJAAcAAAAZAAgAAAAJAAcAAAAZAAkAAAAJAAcAAAAZAAoAAAAJAAcAAAAZAAsAAAAJAAcAAAAZAAwAAAAJAAcAAAAZAA0AAAAJAAcAAAAZAA4AAAABAAUAAAAZAA8AAAAIAAcAAAAaAAAAAAAIAAcAAAAaAAEAAAABAAAAAAAaAAIAAAAJAAcAAAAaAAMAAAAJAAcAAAAaAAQAAAAJAAcAAAAaAAUAAAAJAAcAAAAaAAYAAAAJAAcAAAAaAAcAAAAJAAcAAAAaAAgAAAAJAAcAAAAaAAkAAAAJAAcAAAAaAAoAAAAJAAcAAAAaAAsAAAAJAAcAAAAaAAwAAAAJAAcAAAAaAA0AAAAJAAcAAAAaAA4AAAABAAUAAAAaAA8AAAAIAAcAAAAbAAAAAAAIAAcAAAAbAAEAAAABAAAAAAAbAAIAAAAJAAcAAAAbAAMAAAAJAAcAAAAbAAQAAAAJAAcAAAAbAAUAAAAJAAcAAAAbAAYAAAAJAAcAAAAbAAcAAAAJAAcAAAAbAAgAAAAJAAcAAAAbAAkAAAAJAAcAAAAbAAoAAAAJAAcAAAAbAAsAAAAJAAcAAAAbAAwAAAAJAAcAAAAbAA0AAAAJAAcAAAAbAA4AAAABAAUAAAAbAA8AAAAIAAcAAAAcAAAAAAAIAAcAAAAcAAEAAAABAAAAAAAcAAIAAAAJAAcAAAAcAAMAAAAJAAcAAAAcAAQAAAAJAAcAAAAcAAUAAAAJAAcAAAAcAAYAAAAJAAcAAAAcAAcAAAAJAAcAAAAcAAgAAAAJAAcAAAAcAAkAAAAJAAcAAAAcAAoAAAAJAAcAAAAcAAsAAAAJAAcAAAAcAAwAAAAJAAcAAAAcAA0AAAAJAAcAAAAcAA4AAAABAAUAAAAcAA8AAAAIAAcAAAAdAAAAAAAIAAcAAAAdAAEAAAABAAAAAAAdAAIAAAAJAAcAAAAdAAMAAAAJAAcAAAAdAAQAAAAJAAcAAAAdAAUAAAAJAAcAAAAdAAYAAAAJAAcAAAAdAAcAAAAJAAcAAAAdAAgAAAAJAAcAAAAdAAkAAAAJAAcAAAAdAAoAAAAJAAcAAAAdAAsAAAAJAAcAAAAdAAwAAAAJAAcAAAAdAA0AAAAJAAcAAAAdAA4AAAABAAUAAAAdAA8AAAAIAAcAAAAeAAAAAAAIAAcAAAAeAAEAAAAFAAEAAAAeAAIAAAAFAAEAAAAeAAMAAAAFAAEAAAAeAAQAAAAFAAEAAAAeAAUAAAAFAAEAAAAeAAYAAAABAAAAAAAeAAcAAAAJAAcAAAAeAAgAAAAJAAcAAAAeAAkAAAAAAAUAAAAeAAoAAAAFAAEAAAAeAAsAAAAFAAEAAAAeAAwAAAAFAAEAAAAeAA0AAAAFAAEAAAAeAA4AAAAFAAQAAAAeAA8AAAAIAAcAAAAfAAAAAAAIAAcAAAAfAAEAAAAIAAcAAAAfAAIAAAAIAAcAAAAfAAMAAAAIAAcAAAAfAAQAAAAIAAcAAAAfAAUAAAAIAAcAAAAfAAYAAAABAAAAAAAfAAcAAAAJAAcAAAAfAAgAAAAJAAcAAAAfAAkAAAABAAUAAAAfAAoAAAAIAAcAAAAfAAsAAAAIAAcAAAAfAAwAAAAIAAcAAAAfAA0AAAAIAAcAAAAfAA4AAAAIAAcAAAAfAA8AAAAIAAcAAAAMAAoAAAAJAAcAAAAJAAYAAAAJAAcAAAAVAAoAAAAJAAcAAAAYAAcAAAAJAAcAAAAAAAkAAAABAAUAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="base_open" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAeAAcAAAAIAAQAAGAeAAgAAAAIAAUAAFABAAcAAAAHAAQAAFABAAgAAAAHAAUAAGAPAAEAAAAHAAUAAAAQAAEAAAAIAAUAAAAQAA4AAAAIAAQAAAAPAA4AAAAHAAQAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="base_door" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAOAAAAAAAAAAMAAAAOAAEAAAABAAAAAAAPAAAAAAAJAAcAAAAPAAEAAAAGAAMAAAAQAAAAAAAJAAcAAAAQAAEAAAAHAAMAAAARAAAAAAAFAAMAAAARAAEAAAABAAAAAAAOAA4AAAADAAUAAAAOAA8AAAAAAAMAAAAPAA4AAAAGAAMAAAAPAA8AAAAJAAcAAAAQAA4AAAAHAAMAAAAQAA8AAAAJAAcAAAARAA4AAAAAAAUAAAARAA8AAAAFAAMAAAABAAcAAAAIAAQAAAABAAgAAAAIAAUAAAAeAAcAAAAHAAQAAAAeAAgAAAAHAAUAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="top_wall" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAPAAEAAAABAAAAAAAQAAEAAAABAAAAAAAQAAAAAAAIAAcAAAAPAAAAAAAIAAcAAAAOAAAAAAAIAAcAAAARAAAAAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="bottom_wall" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAPAA4AAAABAAUAAAAOAA4AAAABAAUAAAAQAA4AAAABAAUAAAARAA4AAAABAAUAAAAOAA8AAAAIAAcAAAAPAA8AAAAIAAcAAAAQAA8AAAAIAAcAAAARAA8AAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="left_wall" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAABAAcAAAAAAAMAAAABAAgAAAAAAAMAAAABAAYAAAAAAAMAAAABAAkAAAAAAAMAAAAAAAkAAAAIAAcAAAAAAAgAAAAIAAcAAAAAAAcAAAAIAAcAAAAAAAYAAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="right_wall" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAeAAgAAAAFAAMAAAAeAAcAAAAFAAMAAAAeAAYAAAAFAAMAAAAeAAkAAAAFAAMAAAAfAAkAAAAIAAcAAAAfAAgAAAAIAAcAAAAfAAcAAAAIAAcAAAAfAAYAAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="CharacterBody2D" parent="." instance=ExtResource("2_qimmo")]
position = Vector2(120, 113)
scale = Vector2(2.5, 2.5)

[node name="top_door" type="TileMapLayer" parent="."]
visible = false
use_parent_material = true
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AAAPAAEAAAAGAAMAAAAQAAEAAAAHAAMAAAAOAAAAAAAAAAMAAAAOAAEAAAABAAAAAAAPAAAAAAAJAAcAAAAQAAAAAAAJAAcAAAARAAAAAAAFAAMAAAARAAEAAAABAAAAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="bottom_door" type="TileMapLayer" parent="."]
visible = false
use_parent_material = true
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AAAOAA4AAAADAAUAAAAOAA8AAAAAAAMAAAAPAA8AAAAJAAcAAAAQAA8AAAAJAAcAAAARAA4AAAAAAAUAAAARAA8AAAAFAAMAAAAQAA4AAAAHAAMAAAAPAA4AAAAGAAMAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="left_door" type="TileMapLayer" parent="."]
visible = false
use_parent_material = true
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AAABAAcAAAAIAAQAAAABAAgAAAAIAAUAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="right_door" type="TileMapLayer" parent="."]
visible = false
use_parent_material = true
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AAAeAAcAAAAHAAQAAAAeAAgAAAAHAAUAAAA=")
tile_set = SubResource("TileSet_p8jlf")
